# dogleg

./: .gitignore  Cargo.toml  README.md  Readme.md  test-problems.md
.github/workflows/: build.yml  coverage.yml  lints.yml  tests.yml
argmin-dogleg/: Cargo.toml
argmin-dogleg/src/: levmar_adapter.rs  lib.rs  test.rs  tests.rs
ceres-dogleg/: Cargo.toml  build.rs
ceres-dogleg/cpp/: glogging.cpp
ceres-dogleg/src/: lib.rs  test.rs  tests.rs
dogleg/: Cargo.toml  LICENSE  Readme.md  katex-header.html
dogleg-matx/: Cargo.toml  Readme.md
dogleg-matx/src/: faer_impl.rs  lib.rs  magic_const.rs  nalgebra_impl.rs  utility.rs
dogleg-matx/src/faer_impl/: approx_util.rs  test.rs
dogleg-matx/src/faer_impl/approx_util/: test.rs
dogleg-matx/src/nalgebra_impl/: test.rs
dogleg/examples/: simple.rs
dogleg/src/: argmin_tests.rs  dogleg.rs  error.rs  lib.rs  magic_const.rs  problem.rs  test.rs  test_adapters.rs  test_examples.rs  utility.rs
dogleg/src/dogleg/: common.rs  report.rs  reset_guard.rs  svd_impl.rs
dogleg/src/dogleg/common/: test.rs
dogleg/src/problem/: levmar_adapter.rs
dogleg/src/test/: debugging.rs
dogleg/src/test_examples/: problems.rs
levmar-problems/: Cargo.toml
levmar-problems/src/: assertions.rs  lib.rs  problems.rs  utils.rs
levmar-problems/src/utils/: finite_difference.rs
src/: dogleg.rs  lib.rs  utility.rs
src/dogleg/: common.rs  svd_impl.rs
templated-tests/: Cargo.toml
templated-tests/src/: lib.rs  template.rs
