[package]
name = "ceres-dogleg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
approx = "0.5"
ceres-solver = {version = "0.5"}
nalgebra = "0.34"
levenberg-marquardt = "0.15"
levmar-problems = {path = "../levmar-problems"}
dogleg-matx = {path = "../dogleg-matx"}
assert2 = "0.3"

[features]
debugging = []

[build-dependencies]
cc = "1.2"
