[package]
name = "dogleg"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
dogleg-matx = {version = "0.1", path = "../dogleg-matx"}
thiserror = "2.0"
# enable this to expose adapter types with the levenberg-marquardt crate
# TODO consider if different version of this crate should be supported
# via feature flags. However, this complicates nalgebra (and nalgebra-lapack)
# dependencies.
levenberg-marquardt = {version = "0.15", optional = true}
# todo remove
nalgebra = "0.34"
assert2 = {version = "0.3", optional = true}

[features]
# TODO remove this
# default = ["levenberg-marquardt"]
default = []
assert2 = ["dep:assert2","dogleg-matx/assert2"]

[dev-dependencies]
approx = "0.5"
# this is wild, but it works! Enable features of my own crate for testing purposes
dogleg = {path = ".", features = ["levenberg-marquardt"]}
# argmin-dogleg = {path = "../argmin-dogleg"}
# ceres-dogleg = {path = "../ceres-dogleg"}
# ceres-solver-sys = {version = "0.5", default-features = false, features = ["source"]}
# ceres-solver = {version = "0.5", default-features = false, features = ["source"]}
levmar-problems = {path = "../levmar-problems"}
levenberg-marquardt = {version = "0.15"}
